Changed component selector to work.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,14 @@
         <h1>kinklist<label>[Beta]</label></h1>
         <h2>What's your kink?</h2>
     </div>
-    
+
     <toolbox></toolbox>
 
     <div class="page-content">
+
+        <editPanel></editPanel>
+        
+        <displayPanel></displayPanel>
 
     </div>
 </div>
