--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -79,6 +79,7 @@ body {
 
 .mode-display {
     .rating-group-header {
+        background-color: $tertiary-color;
         color: $text-secondary-color;
         cursor: pointer;
         position: relative;
@@ -217,6 +218,7 @@ body {
 }
 
 .rating-group {
+    display: block;
     text-align: center;
     padding: 1em 2em;
 }
